# Cache-playground

./: .gitignore  CMakeLists.txt  LIRS graphics.md  README.md  main.cpp  metrics.h  plot_metrics.py  regenerate_lirs_graphics.sh  regenerate_readme.sh
CacheImplementations/: AdaptCache.h  DLIRSCache.h  LFUCache.h  LIRS2Cache.h  LIRSCache.h  LRFUCache.h  LRUCache.h  OPTCache.h  adaptive_replacement_cache.h  cache_interface.h
Datasets/: dataset.h  dataset_parser.cpp  dataset_parser.h
Datasets/1_synthetic/: sample1.txt  synthetic_generator.py
Datasets/2_twitter/: cluster010-parsed.txt  cluster014-parsed.txt  cluster023-parsed.txt  cluster025-parsed.txt  cluster026-parsed.txt  run-all.sh
Datasets/2_twitter/analysis/: cluster008.ipynb
Datasets/2_twitter/raw_data/: parse-all.sh  parser.py
Datasets/analysis/: cluster008.ipynb  twitter-cluster012.ipynb  utils.py
